-- Note: at time-of-wrting, only sdb uses this package.

name:                upstreamables
version:             0.1.0.0

synopsis:            Temporary, local additions to Hackage modules.

description:         Please see ReadMe.md.

homepage:            https://snowdrift.coop
license:             AGPL-3
license-file:        ../LICENSE.md
author:              Snowdrift.coop
maintainer:          dev@lists.snowdrift.coop

build-type:          Simple
cabal-version:      >= 1.2


-- NB: there's no exposed "AdditionsTo" module. That would allow too vague an
-- import.
library
    exposed-modules:
          AdditionsTo.Development.Shake
        , AdditionsTo.Filesystem.Path.CurrentOS
        , AdditionsTo.Stack.Path.MaybeGetProjRoot
        , AdditionsTo.System.Posix.Escape
        , AdditionsTo.Turtle

    build-depends:
    -- Basic dependencies, used throughout sdb-supporting modules:
        base, text < 1.3, shake, turtle,
        system-filepath >=0.3.1 && <0.5,

    -- Used to aid readability, especailly where composing/piping functions:
        flow,

    -- Simple helper functions. Better than us re-inventing the wheel:
        cond, string-combinators,

    -- Used in AdditionsTo.System.Posix.Escape:
        posix-escape,

    -- The "semigroups" package is used to convert the "NonEmpty" list data type
    -- into an ordinary list.
    -- "hostname-validate" is used to ensure a given hostname is legal, while
    -- iproute is used for its "IP" data type. Both packages are used in
    -- AdditionsTo.Turtle.Postgres.ModifyPostgresConf, to allow the program
    -- developer to write hostnames and/or IP addresses in a type-mediated
    -- manner for the "unix_socket_directories" parameter to PostgreSQL.
        semigroups, hostname-validate, iproute,

    -- Used in AdditionsTo.Turtle.Postgres for the Hostname data type:
        bytestring

    -- Stack / Cabal has to be told about our sub-modules, or else it can't
    -- compile:
    other-modules:
          AdditionsTo.Turtle.Bash
        , AdditionsTo.Turtle.Line
        , AdditionsTo.Turtle.Patterns
        , AdditionsTo.Turtle.Postgres
        , AdditionsTo.Turtle.Postgres.Executables
        , AdditionsTo.Turtle.Postgres.Internal
        , AdditionsTo.Turtle.Postgres.Internal.InputCheck
        , AdditionsTo.Turtle.Postgres.Internal.Marshalling
        , AdditionsTo.Turtle.Postgres.Internal.PatternWork
        , AdditionsTo.Turtle.Postgres.Internal.Types
        , AdditionsTo.Turtle.Postgres.ModifyPostgresConf
        , AdditionsTo.Turtle.Prelude
        , AdditionsTo.Turtle.Shake
        , AdditionsTo.Turtle.Shell

    -- Strangely, this was needed for Cabal / Stack to find things. It was
    -- either that or a nearly-empty "AdditionsTo.hs" file.
    hs-source-dirs: .
